# housing_app

./: README.md  app.py  app_v2.py  extract.py  extract_categorized_items.py  extract_items.py  main.py  manual_blurbs.json  merge_json.py  newsapp.py  note.md  notes_2.md  pyproject.toml  rebuild_items.py
extracted_json/: April 20.json  April 21.json  April 22.json  April 25.json  December 22.json  December 23.json  December 25.json  February 20.json  February 22.json  February 23.json  February 24.json  February 25.json  February 26.json  January 20.json  January 22.json  January 24.json  January 25.json  January 26.json  July 20.json  July 21.json  July 22.json  July 24.json  July 25.json  Jun 22.json  June 21.json  June 25.json  March 20.json  March 22.json  March 23.json  March 24.json  March 25.json  March 26.json  March special 23.json  May 20.json  May 21.json  May 22.json  May 23.json  May 24.json  May 25.json  November 20.json  (+26 more)
newsapp_static/: styles.css
newsapp_templates/: family.html  index.html  item.html  meeting.html  meetings.html
static/: styles.css
templates/: base_v2.html  category_breakdown.html  category_v2.html  detail.html  index.html  index_v2.html  item_v2.html
